add: simplify homepage

--- a/index.html
+++ b/index.html
@@ -37,20 +37,7 @@
                         </h1>
                         <hr />
 
-                        <p>
-                            Rainbeam is a simple Q&A social network designed for
-                            community! On Rainbeam, users can create and
-                            customize their profile to look how they want, and
-                            then other users can ask them questions using their
-                            account or an anonymous username. Users receive
-                            questions in their inbox and can then answer them or
-                            manage them. Users can also ask “global questions”
-                            which everybody who is following them can see in a
-                            specialized timeline. Global questions can be
-                            answered by any logged-in user. Users can also
-                            respond to existing responses with comments to
-                            further interact with their friends' responses!
-                        </p>
+                        <p>Rainbeam is a simple Q&A social network.</p>
 
                         <hr />
                         <h2 id="links">Links</h2>
@@ -74,27 +61,17 @@
                         </ul>
                     </div>
 
-                    <div
-                        class="card"
-                        style="
-                            display: flex;
-                            flex-wrap: wrap;
-                            gap: 0.5rem;
-                            justify-content: center;
-                            align-items: center;
-                        "
-                    >
-                        <img
-                            src="./static/favicon.svg"
-                            alt="Rainbeam favicon"
-                            style="max-width: 50px"
-                        />
-
-                        <img
-                            src="https://repository-images.githubusercontent.com/842029374/dc1b22db-a678-446e-b072-1544b661918e"
-                            alt="Rainbeam header image"
-                            style="max-width: 100px"
-                        />
+                    <div class="card">
+                        <iframe
+                            frameborder="0"
+                            src="https://rainbeam.net/@spark/embed"
+                            style="
+                                width: 100%;
+                                height: 400px;
+                                border-radius: var(--radius);
+                                border: solid 1px var(--color-lowered);
+                            "
+                        ></iframe>
                     </div>
                 </article>
             </div>
