add: terms of use

--- a/index.html
+++ b/index.html
@@ -58,6 +58,10 @@
                             <li>
                                 <a href="https://rainbeam.net">Homepage</a>
                             </li>
+
+                            <li>
+                                <a href="./terms.html">Terms of Use</a>
+                            </li>
                         </ul>
                     </div>
 
