add(terms): disallow username hoarding

--- a/terms.html
+++ b/terms.html
@@ -58,6 +58,14 @@
                         </p>
 
                         <p>
+                            The act of "hoarding" or squatting usernames on our
+                            services is not allowed. We reserve the right to
+                            terminate any account found to be created with the
+                            intention of blocking others from using a given
+                            username.
+                        </p>
+
+                        <p>
                             All content you upload to our services must be
                             acceptable by these terms and the laws of the
                             country in which our servers are located.
