add: include "Neospring" in terms

--- a/terms.html
+++ b/terms.html
@@ -39,14 +39,14 @@
 
                         <p>
                             This document ("Terms of Use") defines the basis in
-                            which access to our services ("Rainbeam") is
-                            granted. This document also defines the control we
-                            have over all content uploaded to the site where it
-                            is visible to the public or accessible by anyone;
-                            information, text, graphics, photos ("Content"). By
-                            registering an account or using our services, you
-                            agree to these terms and are constrained by the
-                            rules defined here.
+                            which access to our services ("Rainbeam",
+                            "Neospring") is granted. This document also defines
+                            the control we have over all content uploaded to the
+                            site where it is visible to the public or accessible
+                            by anyone; information, text, graphics, photos
+                            ("Content"). By registering an account or using our
+                            services, you agree to these terms and are
+                            constrained by the rules defined here.
                         </p>
 
                         <h2 id="usage">(2) Usage</h2>
