add(terms): disallow mass reports

--- a/terms.html
+++ b/terms.html
@@ -89,6 +89,16 @@
                             suspension of our services whatsoever.
                         </p>
 
+                        <p>
+                            Rainbeam allows all types of user content to be
+                            reported. Mass reporting content will result in mass
+                            IP banning. All reports found to be associated with
+                            a targeted attack on a user using reports will be IP
+                            banned. Users should report individual responses,
+                            questions, or comments if they believe they are in
+                            violation of these terms.
+                        </p>
+
                         <h2 id="content">(3) Content</h2>
 
                         <p>
