--- a/terms.html
+++ b/terms.html
@@ -153,7 +153,7 @@
                         <hr />
                         <!-- prettier-ignore -->
                         <p>
-                            The state of these terms if tracked in the public
+                            The state of these terms is tracked in the public
                             GitHub repository at
                             <a href="https://github.com/swmff/about.rainbeam.net">https://github.com/swmff/about.rainbeam.net</a>.
                         </p>
