--- a/terms.html
+++ b/terms.html
@@ -40,7 +40,7 @@
                         <p>
                             This document ("Terms of Use") defines the basis in
                             which access to our services ("Rainbeam",
-                            "Neospring") is granted. This document also defines
+                            "Neospring", "Warble.cc") is granted. This document also defines
                             the control we have over all content uploaded to the
                             site where it is visible to the public or accessible
                             by anyone; information, text, graphics, photos
